edit some minor bug in the z-index between toolbar and sidenav

--- a/dear_resume/style.css
+++ b/dear_resume/style.css
@@ -914,6 +914,12 @@
   font-weight: bold;
   font-size: 1.2em;
 }
+.top-toolbar {
+  z-index: 7;
+}
+#resume-editor .md-sidenav .md-sidenav-content {
+  z-index: 1000;
+}
 
 .bottom-toolbar-title {
   font-family: "American Typewriter", "Courier New", serif;
